api first method, getProjects overrode
