# src/main/java/it/intesys/academy/controller/MvcProjectController.java
@@ -1,6 +1,7 @@
 package it.intesys.academy.controller;
 
 import it.intesys.academy.controller.openapi.model.ProjectApiDTO;
+import it.intesys.academy.dto.ProjectDTO;
 import it.intesys.academy.service.ProjectService;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
@@ -47,10 +48,10 @@ public class MvcProjectController {
     }
 
     @PostMapping("/projects")
-    public String createNewProject(@ModelAttribute ProjectApiDTO projectDTO,
+    public String createNewProject(@ModelAttribute ProjectDTO projectDTO,
                                    @RequestParam String userName) {
 
-        ProjectApiDTO project = projectService.createProject(projectDTO, userName);
+        ProjectDTO project = projectService.createProject(projectDTO, userName);
 
         return "redirect:/mvc/projects/" + project.getId() + "?userName=" + userName;
 
